--- a/ultralytics/cfg/models/v8/resnet101back.yaml
+++ b/ultralytics/cfg/models/v8/resnet101back.yaml
@@ -6,10 +6,10 @@ nc: 80  # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call yolov8.yaml with scale 'n'
   # [depth, width, max_channels]
   # n: [0.33, 0.25, 1024]
-  # s: [0.33, 0.50, 1024]
+  s: [0.33, 0.50, 1024]
   # m: [0.67, 0.75, 768]
-  l: [1.00, 1.00, 512]   # YOLOv8l summary: 610 layers, 68283648 parameters, 68283632 gradients, 213.0 GFLOPs
-  x: [1.00, 1.25, 512]
+  # l: [1.00, 1.00, 512]   # YOLOv8l summary: 610 layers, 68283648 parameters, 68283632 gradients, 213.0 GFLOPs
+  # x: [1.00, 1.25, 512]
 
 # YOLOv8.0n backbone
 backbone:
