--- a/ultralytics/cfg/models/v8/Yolov8-swin.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-swin.yaml
@@ -15,11 +15,11 @@ backbone:
   - [-1, 1, TorchVision, [768, swin_t, DEFAULT, True, 5, True]]    # 0 - Swin-T (truncated, split)
   # Extract feature maps at different scales
   - [0, 1, Index, [192, 4]]                                        # 1 - P3/8  (B, 80, 80, 192)
-  - [-1, 1, Permute, [[0, 3, 1, 2]]]                               # 2 - P3/8  (B, 192, 80, 80)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]                               # 2 - P3/8  (B, 192, 80, 80)
   - [0, 1, Index, [384, 6]]                                        # 3 - P4/16 (B, 40, 40, 384)
-  - [-1, 1, Permute, [[0, 3, 1, 2]]]                               # 4 - P4/16 (B, 384, 40, 40)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]                               # 4 - P4/16 (B, 384, 40, 40)
   - [0, 1, Index, [768, 8]]                                        # 5 - P5/32 (B, 20, 20, 768)
-  - [-1, 1, Permute, [[0, 3, 1, 2]]]                               # 6 - P5/32 (B, 768, 20, 20)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]                               # 6 - P5/32 (B, 768, 20, 20)
   - [-1, 1, SPPF, [768, 5]]                                        # 7 - P5/32 (B, 768, 20, 20)
 
 head:
