--- a/ultralytics/cfg/models/v8/Yolov8-efficientNet.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-efficientNet.yaml
@@ -52,6 +52,6 @@
 
 nc: 1
 backbone:
-  - [-1, 1, TorchVision, [1280, "efficientnet_b3", "DEFAULT", True, 2, False]]  # - 0
+  - [-1, 1, TorchVision, [768, "convnext_tiny", "DEFAULT", True, 2, False]]
 head:
   - [-1, 1, nn.Identity, []]
