--- a/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
@@ -1,7 +1,11 @@
 nc: 1
 backbone:
   # - [-1, 1, TorchVision, [768, swin_t, "DEFAULT", True, 4, True]]
+  # CNN track
   - [-1, 1, TorchVision, [960, mobilenet_v3_large, "DEFAULT", True, 2, True]]  # 0
-  - [-1, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]]
+  # Swin track
+  - [-1, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #1
+  - [1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #2
+  - [[0,2], 1, Concat, [1]]  # 3: Concatenate along channel dimension
 head:
   - [-1, 1, nn.Identity, []]
