--- a/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
@@ -2,13 +2,13 @@ nc: 1
 backbone:
   # - [-1, 1, TorchVision, [768, swin_t, "DEFAULT", True, 4, True]]
   #Input image placeholder
-  - [-1, 1, nn.Identity, []]
+  - [-1, 1, nn.Identity, []] #0
   # CNN track
-  # - [-1, 1, TorchVision, [960, mobilenet_v3_large, "DEFAULT", True, 2, False]]  # 0
+  - [0, 1, TorchVision, [960, mobilenet_v3_large, "DEFAULT", True, 2, False]]  # 1
   # Swin track
-  # - [-2, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, False]] #1
-  # - [1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #2
-  # - [[0,2], 1, Concat, [1]]  # 3: Concatenate along channel dimension
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, False]] #2
+  - [2, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3
+  - [[1,3], 1, Concat, [1]]  # 3: Concatenate along channel dimension
 head:
   - [-1, 1, nn.Identity, []]
   
