--- a/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
@@ -4,9 +4,9 @@ backbone:
   #Input image placeholder
   - [-1, 1, nn.Identity, []] #0
   # CNN track
-  - [0, 1, TorchVision, [960, mobilenet_v3_large, "DEFAULT", True, 2, False]]  # 1
+  - [0, 1, TorchVision, [960, mobilenet_v3_large, "DEFAULT", True, 2, True]]  # 1
   # Swin track
-  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, False]] #2
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #2
   - [2, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3
   - [[1,3], 1, Concat, [1]]  # 3: Concatenate along channel dimension
 head:
