--- a/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
@@ -7,8 +7,9 @@ backbone:
   - [0, 1, TorchVision, [960, mobilenet_v3_large, "DEFAULT", True, 2, True]]  # 1
   # Swin track
   - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #2
-  - [2, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #3
-  - [[1,3], 1, Concat, [1]]  # 3: Concatenate along channel dimension
+  - [2, 1, Index, [768 ,9] #3
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #4
+  - [[1,4], 1, Concat, [1]]  # 3: Concatenate along channel dimension
 head:
   - [-1, 1, nn.Identity, []]
   
