--- a/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
@@ -5,11 +5,12 @@ backbone:
   - [-1, 1, nn.Identity, []] #0
   # CNN track
   - [0, 1, TorchVision, [960, mobilenet_v3_large, "DEFAULT", True, 2, True]]  # 1
+  - [-1, 1, Index, [960, 17]] #2
   # Swin track
-  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #2
-  - [2, 1, Index, [768 ,9]] #3
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #4
-  - [[1,4], 1, Concat, [1]]  # 3: Concatenate along channel dimension
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #3
+  - [2, 1, Index, [768 ,9]] #4
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5
+  - [[2,4], 1, Concat, [1]]  # 6 Concatenate along channel dimension
 head:
   - [-1, 1, nn.Identity, []]
   
