--- a/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
@@ -1,16 +1,30 @@
 nc: 1
 backbone:
-  # - [-1, 1, TorchVision, [768, swin_t, "DEFAULT", True, 4, True]]
-  #Input image placeholder
+    #Input image placeholder
   - [-1, 1, nn.Identity, []] #0
+  
   # CNN track
   - [0, 1, TorchVision, [960, mobilenet_v3_large, "DEFAULT", True, 2, True]]  # 1
-  - [-1, 1, Index, [960, 17]] #2
+  - [-1, 1, Index, [40, 7]] #2 multiscale 1
+  - [1, 1, Index, [112, 13]] #3 multicale 2
+  - [1, 1, Index, [960, 17]] #4
+  - [-1, 1, SPPF, [960, 5]] #5 multiscale 3
+  
   # Swin track
-  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #3
-  - [-1, 1, Index, [768 ,9]] #4
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #5
-  - [[2,5], 1, Concat, [1]]  # 6 Concatenate along channel dimension
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #6
+  - [-1, 1, Index, [192 ,4]] #7
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #8 multiscale 1
+  - [6, 1, Index [384, 6]] #9
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #10 multiscale 2
+  - [6, 1, Index, [768, 9]] #11
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #12
+  - [-1, 1, SPPF, [768, 5]] #13 multiscale 3
+
+  # Concat features along channel dimension
+  - [[2, 8], 1, Concat, [1]] # 14 concat scale 1
+  - [[3, 10], 1, Concat, [1]] #15 concat scale 2
+  - [[5, 13], 1, Concat, [1]] #16 concat scale 3
 head:
+  - []
   - [-1, 1, nn.Identity, []]
   
