--- a/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-DualTrack.yaml
@@ -14,7 +14,7 @@ backbone:
   - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #6
   - [-1, 1, Index, [192 ,4]] #7
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #8 multiscale 1
-  - [6, 1, Index [384, 6]] #9
+  - [6, 1, Index, [384, 6]] #9
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #10 multiscale 2
   - [6, 1, Index, [768, 9]] #11
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #12
