--- a/ultralytics/cfg/models/v8/crossAttn.yaml
+++ b/ultralytics/cfg/models/v8/crossAttn.yaml
@@ -1,7 +1,7 @@
 # Custom YOLOv8 Model with Cross-Attention
 nc: 2  # Number of classes
 scales:
-  s: [0.33, 0.50, 1024]  # YOLOv8s scaling constants
+  # s: [0.33, 0.50, 1024]  # YOLOv8s scaling constants
 backbone:
   - [-1, 1, nn.Identity, []] #0
   # CNN track
