--- a/ultralytics/cfg/models/v8/Yolov8-Dualtrack-Crossattn.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-Dualtrack-Crossattn.yaml
@@ -37,7 +37,7 @@ backbone:
   - [-1, 1, nn.Flatten, [1, 2]]      # 18 Flatten H and W dimensions (B, H*W, C)
 
   # Cross-Attention Modules (Swin attends to CNN)
-  - [[18, 16, 16], 1, Attention, [192, 8, 64]]  # 19 Swin (Q) attends to CNN (K, V), output channels = 192, kv_in_dim = 64
+  - [[18, 16, 16], 1, Attention, [192, 8, 1, 64]]  # 19 Swin (Q) attends to CNN (K, V), output channels = 192, kv_in_dim = 64
 
   # Reshape the attended features back to the original shape
   - [19, 1, nn.Linear, [192]] # 20 Transform attended swin features to output channel 192
@@ -54,7 +54,7 @@ backbone:
   - [-1, 1, nn.Flatten, [1, 2]]      # 27 Flatten H and W dimensions (B, H*W, C)
 
   # Cross-Attention Modules (Swin attends to CNN)
-  - [[27, 25, 25], 1, Attention, [384, 8, 128]]  # 28 Swin (Q) attends to CNN (K, V), output channels = 384, kv_in_dim = 128
+  - [[27, 25, 25], 1, Attention, [384, 8, 1, 128]]  # 28 Swin (Q) attends to CNN (K, V), output channels = 384, kv_in_dim = 128
 
   # Reshape the attended features back to the original shape
   - [28, 1, nn.Linear, [384]] # 29 Transform attended swin features to output channel 384
@@ -71,7 +71,7 @@ backbone:
   - [-1, 1, nn.Flatten, [1, 2]]      # 36 Flatten H and W dimensions (B, H*W, C)
 
   # Cross-Attention Modules (Swin attends to CNN)
-  - [[36, 34, 34], 1, Attention, [768, 8, 256]]  # 37 Swin (Q) attends to CNN (K, V), output channels = 768, kv_in_dim = 256
+  - [[36, 34, 34], 1, Attention, [768, 8, 1, 256]]  # 37 Swin (Q) attends to CNN (K, V), output channels = 768, kv_in_dim = 256
 
   # Reshape the attended features back to the original shape
   - [37, 1, nn.Linear, [768]] # 38 Transform attended swin features to output channel 768
