--- a/ultralytics/cfg/models/v8/Yolov8-Dualtrack-Crossattn.yaml
+++ b/ultralytics/cfg/models/v8/Yolov8-Dualtrack-Crossattn.yaml
@@ -37,10 +37,10 @@ backbone:
   - [-1, 1, nn.Flatten, [1, 2]]      # 18 Flatten H and W dimensions (B, H*W, C)
 
   # Cross-Attention Modules (Swin attends to CNN)
-  - [[18, 16, 16], 1, Attention, [192, 8, 1, 64]]  # 19 Swin (Q) attends to CNN (K, V), output channels = 192, kv_in_dim = 64
+  - [[18, 16, 16], 1, Attention, [192, 8, 64]]  # 19 Swin (Q) attends to CNN (K, V), output channels = 192, kv_in_dim = 64
 
   # Reshape the attended features back to the original shape
-  - [19, 1, nn.Linear, [192]] # 20 Transform attended swin features to output channel 192
+  - [19, 1, nn.Linear, [192, 192]] # 20 Transform attended swin features to output channel 192
   - [-1, 1, nn.Unflatten, [1, (80, 80)]] # 21 Unflatten back to (B, 80, 80, 192)
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]  # 22: Permute back to (B, 192, 80, 80)
 
@@ -54,10 +54,10 @@ backbone:
   - [-1, 1, nn.Flatten, [1, 2]]      # 27 Flatten H and W dimensions (B, H*W, C)
 
   # Cross-Attention Modules (Swin attends to CNN)
-  - [[27, 25, 25], 1, Attention, [384, 8, 1, 128]]  # 28 Swin (Q) attends to CNN (K, V), output channels = 384, kv_in_dim = 128
+  - [[27, 25, 25], 1, Attention, [384, 8, 128]]  # 28 Swin (Q) attends to CNN (K, V), output channels = 384, kv_in_dim = 128
 
   # Reshape the attended features back to the original shape
-  - [28, 1, nn.Linear, [384]] # 29 Transform attended swin features to output channel 384
+  - [28, 1, nn.Linear, [384, 384]] # 29 Transform attended swin features to output channel 384
   - [-1, 1, nn.Unflatten, [1, (40, 40)]] # 30 Unflatten back to (B, 40, 40, 384)
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]  # 31: Permute back to (B, 384, 40, 40)
 
@@ -71,10 +71,10 @@ backbone:
   - [-1, 1, nn.Flatten, [1, 2]]      # 36 Flatten H and W dimensions (B, H*W, C)
 
   # Cross-Attention Modules (Swin attends to CNN)
-  - [[36, 34, 34], 1, Attention, [768, 8, 1, 256]]  # 37 Swin (Q) attends to CNN (K, V), output channels = 768, kv_in_dim = 256
+  - [[36, 34, 34], 1, Attention, [768, 8, 256]]  # 37 Swin (Q) attends to CNN (K, V), output channels = 768, kv_in_dim = 256
 
   # Reshape the attended features back to the original shape
-  - [37, 1, nn.Linear, [768]] # 38 Transform attended swin features to output channel 768
+  - [37, 1, nn.Linear, [768, 768]] # 38 Transform attended swin features to output channel 768
   - [-1, 1, nn.Unflatten, [1, (20, 20)]] # 39 Unflatten back to (B, 20, 20, 768)
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]  # 40: Permute back to (B, 768, 20, 20)
 
