--- a/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
+++ b/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
@@ -11,44 +11,7 @@ backbone:
   - [-1, 1, Index, [192, 4]]  # 2 multiscale 1 
   - [1, 1, Index, [384, 6]]  # 3 multiscale 2 
   - [1, 1, Index, [768, 8]]  # 4 
-  - [1, 1, SPPF, [768, 8]]  # 5 multiscale 3 (SPPF on 768 channels)
+  - [-1, 1, SPPF, [768, 8]]  # 5 multiscale 3 (SPPF on 768 channels)
   
-  # Swin track (unchanged)
-  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #6
-  - [-1, 1, Index, [192, 4]] #7
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #8 multiscale 1
-  - [6, 1, Index, [384, 6]] #9
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #10 multiscale 2
-  - [6, 1, Index, [768, 9]] #11
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #12
-  - [1, 1, SPPF, [768, 9]] #13 multiscale 3
-
-  # Concat features along channel dimension
-  - [[2, 8], 1, Concat, [1]] # 14 concat scale 1 (96 + 192 = 288 channels)
-  - [-1, 1, EMA, [288]]      # 15 EMA for scale 1 (updated to 288 channels)
-  
-  - [[3, 10], 1, Concat, [1]] # 16 concat scale 2 (192 + 384 = 576 channels)
-  - [-1, 1, EMA, [576]]       # 17 EMA for scale 2 (updated to 576 channels)
-  
-  - [[5, 13], 1, Concat, [1]] # 18 concat scale 3 (768 + 768 = 1536 channels)
-  - [-1, 1, EMA, [1536]]      # 19 EMA for scale 3 (updated to 1536 channels)
-
 head:
-  - [19, 1, nn.Upsample, [None, 2, "nearest"]] # 20 upsample EMA3 output to match H and W with EMA2
-  - [[-1, 17], 1, Concat, [1]] # 21 concat EMA3 + EMA2 (1536 + 576 = 2112 channels)
-  - [-1, 1, C2f, [512]] # 22 (C2f reduces to 512 channels)
-  
-  - [22, 1, nn.Upsample, [None, 2, "nearest"]] # 23 upsample to match H and W
-  - [[-1, 15], 1, Concat, [1]] # 24 concat with EMA1 (512 + 288 = 800 channels)
-  - [-1, 1, C2f, [256]] # 25 (C2f reduces to 256 channels)
-
-  # Bottom-Up Pathway
-  - [25, 1, Conv, [256, 3, 2]]    # 26: Downsample
-  - [[-1, 22], 1, Concat, [1]]    # 27: Concatenate (256 + 512 = 768 channels)
-  - [-1, 1, C2f, [512, True]]     # 28: C2f (reduces to 512 channels)
-
-  - [28, 1, Conv, [512, 3, 2]]    # 29: Downsample
-  - [[-1, 19], 1, Concat, [1]]    # 30: Concatenate with EMA3 (512 + 1536 = 2048 channels)
-  - [-1, 1, C2f, [1024, True]]    # 31: C2f (reduces to 1024 channels)
-
-  - [[25, 28, 31], 1, Detect, [nc]]  # 32: Detect(P3, P4, P5)
+  -[[2, 3, 5], 1, Detect, [nc]]
