--- a/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
+++ b/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
@@ -1,18 +1,8 @@
-nc: 2  # number of classes
-scales:
-  # s: [0.33, 0.50, 1024]  # Uncommented since we'll use this scale
-
+nc: 1
 backbone:
-  # Input image placeholder
-  - [-1, 1, nn.Identity, []]  # 0
-
-  # CNN track (ConvNeXt Tiny)
-  - [-1, 1, TorchVision, [768, convnext_tiny, "DEFAULT", True, 2, True]]  # 1
-  - [-1, 1, Index, [192, 4]]  # 2 multiscale 1
-  - [1, 1, Index, [384, 6]]   # 3 multiscale 2
-  - [1, 1, Index, [768, 8]]   # 4
-  - [-1, 1, SPPF, [768, 8]]   # 5 multiscale 3
-
+  - [-1, 1, TorchVision, [768, "convnext_tiny", "DEFAULT", True, 2, True]]  # - 0
+  - [0, 1, Index, [192, 4]]  # extracts 4th output (1, 192, 80, 80) - 1
+  - [0, 1, Index, [384, 6]]  # extracts 6th output (1, 384, 40, 40) - 2
+  - [0, 1, Index, [768, 8]]  # extracts 8th output (1, 768, 20, 20) - 3
 head:
-  # The error occurs because head needs to be a list of lists, not a single list
-  - [[2, 3, 5], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[1, 2, 3], 1, Detect, [nc]]  # passes all three feature maps to detection head
