--- a/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
+++ b/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
@@ -1,11 +1,28 @@
 nc: 2
 backbone:
   - [-1, 1, nn.Identity, []] #0
-  
+
+  #CNN
   - [-1, 1, TorchVision, [768, "convnext_tiny", "DEFAULT", True, 2, True]]  # - 1
   - [1, 1, Index, [192, 4]]  # extracts 4th output (1, 192, 80, 80) - 2
   - [1, 1, Index, [384, 6]]  # extracts 6th output (1, 384, 40, 40) - 3
   - [1, 1, Index, [768, 8]]  # extracts 8th output (1, 768, 20, 20) - 4
   - [-1, 1, SPPF, [768, 5]] # -5
+  
+  # Swin track
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #6
+  - [-1, 1, Index, [192 ,4]] #7
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #8 multiscale 1
+  - [6, 1, Index, [384, 6]] #9
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #10 multiscale 2
+  - [6, 1, Index, [768, 9]] #11
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #12
+  - [-1, 1, SPPF, [768, 5]] #13 multiscale 3
+
+  #concat
+  - [[2, 8], 1, Concat, [1]] # 14 concat scale 1
+  - [[3, 10], 1, Concat, [1]] # 15 concat scale 1
+  - [[5, 13], 1, Concat, [1]] # 16 concat scale 1
+
 head:
-  - [[2, 3, 4], 1, Detect, [nc]]  # passes all three feature maps to detection head
+  - [[14, 15, 16], 1, Detect, [nc]]  # passes all three feature maps to detection head
