--- a/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
+++ b/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
@@ -21,8 +21,13 @@ backbone:
 
   #concat
   - [[2, 8], 1, Concat, [1]] # 14 concat scale 1
-  - [[3, 10], 1, Concat, [1]] # 15 concat scale 1
-  - [[5, 13], 1, Concat, [1]] # 16 concat scale 1
+  - [-1, 1, EMA, [384]] # 15 ((192 + 192 = 384}
+  
+  - [[3, 10], 1, Concat, [1]] # 16 concat scale 1
+  - [-1, 1, EMA, [768]] # 17 ((384 + 384 = 768}
+  
+  - [[5, 13], 1, Concat, [1]] # 18 concat scale 1
+  - [-1, 1, EMA, [1536]] # 19 ((768 + 768 = 1536}
 
 head:
   - [[14, 15, 16], 1, Detect, [nc]]  # passes all three feature maps to detection head
