--- a/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
+++ b/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
@@ -30,25 +30,23 @@ backbone:
   - [-1, 1, EMA, [1536]] # 19 ((768 + 768 = 1536}
 
 head:
-     # Top-down path (Upsampling)
-  # - [19, 1, nn.Upsample, [None, 2, "nearest"]] # 20
-  # - [[-1, 17], 1, Concat, [1]] # 21 (1536 + 768 = 2304)
-  # - [-1, 1, C2f, [768]] # 22
+# Top-Down Pathway
+  - [19, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample EMA3 to match Scale 2 (index 20)
+  - [[-1, 17], 1, Concat, [1]]                 # Concatenate EMA3 (upsampled) + EMA2 (index 21)
+  - [-1, 1, C2f, [512]]                        # Apply C2f on concatenated features (index 22)
 
-  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 23
-  # - [[-1, 15], 1, Concat, [1]] # 24 (768 + 384 = 1152)
-  # - [-1, 1, C2f, [384]] # 25 P3
+  - [22, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample to match Scale 1 (index 23)
+  - [[-1, 15], 1, Concat, [1]]                 # Concatenate with EMA1 (index 24)
+  - [-1, 1, C2f, [256]]                        # Apply C2f on concatenated features (index 25)
 
-  # # Bottom-up path (PAN)
-  # - [-1, 1, Conv, [384, 3, 2]] # 26
-  # - [[-1, 22], 1, Concat, [1]] # 27 (384 + 768 = 1152)
-  # - [-1, 1, C2f, [768]] # 28 P4
+  # Bottom-Up Pathway
+  - [25, 1, Conv, [256, 3, 2]]    # Downsample Scale 1 (index 26)
+  - [[-1, 22], 1, Concat, [1]]    # Concatenate (Scale 1 -> Scale 2) (index 27)
+  - [-1, 1, C2f, [512, True]]     # Apply C2f (index 28)
 
-  # - [-1, 1, Conv, [768, 3, 2]] # 29
-  # - [[-1, 19], 1, Concat, [1]] # 30 (768 + 1536 = 2304)
-  # - [-1, 1, C2f, [1536]] # 31 P5
+  - [28, 1, Conv, [512, 3, 2]]    # Downsample Scale 2 (index 29)
+  - [[-1, 19], 1, Concat, [1]]    # Concatenate with EMA3 (Scale 3) (index 30)
+  - [-1, 1, C2f, [1024, True]]    # Apply C2f (index 31)
 
-  # Detection head
-  # - [[25, 28, 31], 1, Detect, [nc, [384, 768, 1536]]]  # 32 Detect(P3, P4, P5)
-  # - [[25, 28, 31], 1, Detect, [nc]]  # passes all three feature maps to detection head
-  - [[15, 17, 19], 1, Detect, [nc]]  # passes all three feature maps to detection head
+  # Detection
+  - [[25, 28, 31], 1, Detect, [nc]]  # Pass P3, P4, P5 to Detect head (index 32)
