--- a/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
+++ b/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
@@ -73,5 +73,5 @@ head:
   - [-1, 1, C3k2, [1024, False]]  # Apply C3k2 (index 31)
 
   # Detection
-  - [[25, 28, 31], 1, Detect, [nc]]  # Pass P3, P4, P5 to Detect head (index 32)
+  - [[25, 28, 31], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32)
 
